Version 1.3.1           2021-06-04

Added

Fixed
- default avatar if none set
- OS info in settings
- update urllib3 to 1.26.5

Version 1.3.0           2021-05-31

Added
- 2FA info button, local 2FA bypass per account on account page, command line script to disable 2FA for account
- breadcrumbs removed
- font awesome update to 1.15.3
- vehicle connect icon, wakeup, and hide disconnected vehicle status, vehicle wakeup on data request (i.e. charge status on dashboard)
- user avatar in menu bar, update menu structure, change user avatar in account page

Fixed
- Redirect after login
- Request vehicle status update when enabling
- Webupdate fix and added developer branch update

Version 1.2.9           2021-05-06

Fixed
- Install from front-end failed on stopping the Oppleo service.
- NOTE: Due to changes in the call to the install script (flaskRoutes.py) the install script cannot be run from the front end successfully. Run 'install/install.sh' from the command line in the '/home/pi/Oppleo' folder to apply this update succesfully.


Version 1.2.8           2021-05-06

Fixed
- For development disabled threads re-enabled


Version 1.2.7           2021-05-05

Fixed
- Update version number fixed.
- NOTE: Due to changes in the version update check Oppleo will not detect this update from the web gui. Run 'install/install.sh' (twice!) from the command line in the '/home/pi/Oppleo' folder to force this update.
- NOTE: Due to changes in the install script (install.sh uses a different requirements.txt filename) the install script must be run twice. This first run will install the correct install.sh script, the second run will run that correct script.


Version 1.2.6           2021-05-05

Fixed
- requirements.txt fixed.


Version 1.2.5           2021-05-05

Added
- Two Factor Authentication (2FA) with Time-based One-time Password Algorithm (TOTP; specified in RFC 6238). i.e. Google Authenticator App. Currently no 2FA on restart/switch off.
- Account page.

