@@ -2260,7 +2260,7 @@
 
           <div style="position: relative; display: flex; min-height: 3.4em;">
             <div class="text-center pb-3 charge-session-summary">
-              <span>Transactie</span><span id="csgChargeSessionId"></span><span>met laadpas</span><span id="csgRfid"></span><span>op laadpunt</span><span id="csgChargerName"></span><span>gestart op</span><span id="csgFrom"></span><span>lopend tot</span><span id="csgUntill"></span><span>gedurende</span><span id="csgDuration"></span><span>voor een tarief</span><span id="csgTariff"></span><span>met een totaalverbruik van</span><span id="csgTotalusage"></span><span>en een totaalprijs van</span><span id="csgPrice"></span>.
+              <span>Transactie</span><span id="csgChargeSessionId"></span><span>met laadpas</span><span id="csgRfid"></span><span>op laadpunt</span><span id="csgChargerName"></span><span>gestart op</span><span id="csgFrom"></span><span>lopend tot</span><span id="csgUntill"></span><span>gedurende</span><span id="csgDuration"></span><span>voor een tarief van</span><span id="csgTariff"></span><span>/kWh met een totaalverbruik van</span><span id="csgTotalusage"></span><span>en een totaalprijs van</span><span id="csgPrice"></span>.
             </div>
 
             <div class="legend" style="width: 130px; height: 3.2em; pointer-events: none; float: right;">
